@@ -25,6 +25,12 @@ animate.sts <- function (object, tps = NULL, cumulative = FALSE,
         message("Advice: use facilities of the \"animation\" package, e.g.,\n",
                 "        saveHTML() to view the animation in a web browser.")
 
+    if (is.null(tps))
+        tps <- seq_len(nrow(object))
+    if (!is.null(population)) { # get population matrix
+        population <- parse_population_argument(population, object)
+    }
+
     ## determine color breaks (checkat() is defined in stsplot_space.R)
     at <- checkat(at, data=.rangeOfDataToPlot(object, tps, cumulative, population),
                   counts=is.null(population))
@@ -38,8 +44,6 @@ animate.sts <- function (object, tps = NULL, cumulative = FALSE,
         stopifnot(timeplot_height > 0, timeplot_height < 1)
     }
 
-    if (is.null(tps))
-        tps <- seq_len(nrow(object))
     if (verbose)
         pb <- txtProgressBar(min=0, max=length(tps), initial=0, style=3)
     grobs <- vector(mode = "list", length = length(tps))
@@ -141,17 +145,17 @@ stsplot_timeSimple <- function (x, tps = NULL, highlight = integer(0),
 
 ### determine data range for automatic color breaks 'at'
 
-.rangeOfDataToPlot <- function (object, tps = NULL, cumulative = FALSE,
+.rangeOfDataToPlot <- function (object, tps, cumulative = FALSE,
                                 population = NULL)
 {
     observed <- if (inherits(object, "sts")) observed(object) else object
-    if (!is.null(tps)) {
-        observed <- observed[tps,,drop=FALSE]
-    }
-    if (!is.null(population)) { # compute prevalence
-        stopifnot(is.vector(population, mode="numeric"),
-                  length(population) == ncol(object))
-        observed <- observed / rep(population, each=nrow(observed))
+    observed <- observed[tps,,drop=FALSE]
+    if (!is.null(population)) { # compute (cumulative) incidence
+        observed <- if (cumulative) {
+            observed / rep(population[tps[1L],], each = nrow(observed))
+        } else {
+            observed / population[tps,,drop=FALSE]
+        }
     }
     range(if (cumulative) c(observed[1L,], colSums(observed)) else observed,
           na.rm = TRUE)
