@@ -1,7 +1,7 @@
 \name{sts_animate}
 \alias{animate.sts}
 \title{
-  Animated Maps and Time Series of Disease Incidence
+  Animated Maps and Time Series of Disease Counts or Incidence
 }
 
 \description{
@@ -10,8 +10,8 @@
   implemented by the function \code{\link{stsplot_spacetime}}.
   Maps generated by \code{\link{stsplot_space}} are
   sequentially plotted along time (optionally showing cumulative
-  counts), with an optional time series chart below the map to track the
-  epidemic curve.
+  counts/incidence), with an optional time series chart below the map
+  to track the epidemic curve.
   It is worth using functionality of the \pkg{animation} package
   (e.g., \code{\link[animation]{saveHTML}}) to directly export the
   animation into a useful format.
@@ -39,7 +39,11 @@
     The default \code{tps=NULL} means the whole time period \code{1:nrow(object)}.
   }
   \item{cumulative}{
-    logical specifying if the cumulative counts over time should be plotted.
+    logical specifying if the cumulative counts/incidence over time
+    should be plotted. The cumulative incidence is relative to the
+    population from the first time point \code{tps[1]} throughout the
+    whole animation, while \code{cumulative=FALSE} computes the
+    incidence from the current population numbers.
   }
   \item{population,at,\dots}{
     arguments for \code{\link{stsplot_space}}.
@@ -106,18 +110,19 @@
 \examples{
 data("measlesWeserEms")
 
-## sequential plot of the counts by region in weeks 12-16 only (for speed)
+## animate the weekly counts of measles (during weeks 12-16 only, for speed)
 if (require("animation")) {
     oldwd <- setwd(tempdir())  # to not clutter up the current working dir
-    saveHTML(animate(measlesWeserEms, tps=12:16, cumulative=FALSE),
+    saveHTML(animate(measlesWeserEms, tps=12:16),
              title="Evolution of the measles epidemic in the Weser-Ems region",
              ani.width=500, ani.height=600)
     setwd(oldwd)
 }
 
-## how to label the x-axis of the temporal plot with dates
-## and change the default format
-animate(measlesWeserEms, tps=12:16, cumulative=FALSE,
+## animate the weekly incidence of measles (per 100'000 inhabitants),
+## and label the time series plot with dates in a specified format
+animate(measlesWeserEms, tps=12:16,
+        population = measlesWeserEms@map$POPULATION / 100000,
         timeplot = list(as.Date = TRUE,
                         scales = list(x = list(format = "\%G/\%V"))))
 }
